# fw-nrfconnect-zephyr

./: CMakeLists.txt  Kconfig.zephyr
arch/arm/core/: CMakeLists.txt  Kconfig
arch/arm/core/cortex_m/: prep_c.c  reset.S  vector_table.S
arch/arm/include/: kernel_arch_func.h
arch/x86/: CMakeLists.txt
boards/arm/nrf51_pca10028/: nrf51_pca10028.dts
boards/arm/nrf52840_pca10056/: nrf52840_pca10056.dts
boards/arm/nrf52_pca10040/: nrf52_pca10040.dts
cmake/: dts.cmake  extensions.cmake  generic_toolchain.cmake  kconfig.cmake  kobj.cmake  toolchain.cmake
cmake/app/: boilerplate.cmake
cmake/bintools/llvm/: target.cmake
cmake/compiler/: llvm.cmake
cmake/compiler/gcc/: target.cmake
cmake/flash/: CMakeLists.txt
cmake/toolchain/llvm/: generic.cmake
drivers/clock_control/: nrf_power_clock.c
drivers/flash/: nrf_qspi_nor.c
drivers/i2c/: Kconfig.nrfx
dts/arm/nordic/: nrf9160.dtsi
dts/common/: common.dts  secureboot.overlay
ext/debug/segger/: CMakeLists.txt  Kconfig
ext/debug/segger/rtt/: SEGGER_RTT.c  SEGGER_RTT_printf.c
ext/hal/nordic/nrfx/drivers/src/: nrfx_uart.c
ext/hal/nordic/nrfx/hal/: nrf_acl.h
ext/lib/crypto/mbedtls/: CMakeLists.txt
ext/lib/crypto/nrf_oberon/include/: occ_ecdh_p256.h
ext/lib/mgmt/mcumgr/cmd/img_mgmt/port/zephyr/src/: zephyr_img_mgmt.c
include/arch/arm/cortex_m/scripts/: linker.ld  nrf_common.ld
kernel/: CMakeLists.txt  Kconfig
lib/cmsis_rtos_v1/: CMakeLists.txt
misc/: Kconfig
samples/baremetal_bootloader/: Makefile  Makefile.common  Makefile.posix  Readme.md  bare-metal-bootloader.c
samples/baremetal_bootloader/nrf_startup/: nrf52840_xxaa.ld
samples/boards/nrf52/mesh/onoff_level_lighting_vnd_app/: CMakeLists.txt
samples/hello_world/: CMakeLists.txt  prj.conf
samples/hello_world/src/: main.c
scripts/: keygen.py  mergehex.py  partition_manager.py  provision.py  requirements.txt  sign.py
scripts/dts/extract/: flash.py
soc/arm/nordic_nrf/: Kconfig.peripherals
soc/arm/nordic_nrf/nrf52/: Kconfig.series  Kconfig.soc
subsys/: CMakeLists.txt
subsys/bluetooth/: CMakeLists.txt
subsys/bluetooth/controller/: CMakeLists.txt
subsys/boot/mcuboot/: CMakeLists.txt  Kconfig
subsys/bootloader/: CMakeLists.txt  Kconfig  bl0_crypto.c  bl0_crypto.h  bl1_metadata.h  bootloader.c  startup.c  uart.c
subsys/bootloader/bl0_crypto/: CMakeLists.txt  Kconfig  bl0_crypto.c  bl0_crypto_oberon_ecdsa.c  bl0_crypto_oberon_hash.c
subsys/bootloader/c_runtime_setup/: CMakeLists.txt  Kconfig  gcc_startup_nrf52840.S  startup.c
subsys/bootloader/cmake/: secureboot.cmake
subsys/bootloader/include/: bl0_crypto.h
subsys/bootloader/libc/: CMakeLists.txt
subsys/bootloader/lockdown/: CMakeLists.txt  lockdown_acl.c  lockdown_bprot.c  lockdown_spu.c
subsys/bootloader/lockdown/include/: lockdown.h
subsys/bootloader/provision/: CMakeLists.txt  provision_flash.c
subsys/bootloader/provision/flash/: provision_flash.c
subsys/bootloader/provision/include/: provision.h
subsys/bootloader/rtt/: CMakeLists.txt  SEGGER_RTT_Conf_sb.h  SEGGER_RTT_sb.h
subsys/bootloader/scripts/arm/cortex_m/: nrf_common.ld
subsys/bootloader/uart/: CMakeLists.txt  uart.c  uart.h  uart_config.h  uart_printf.c  uart_printf.h
subsys/logging/: log_backend_rtt.c
subsys/mgmt/: smp_socket.c
subsys/storage/flash_map/: flash_map_default.c
tests/drivers/adc/adc_api/src/: test_adc.c
tests/ext/hal/nordic/nrfx/hal/src/: main.c
tests/subsys/bootloader/bl0_crypto/: CMakeLists.txt  create_bl0_crypto_test_vector.py  prj.conf  test_vector.c  testcase.yaml
tests/subsys/bootloader/bl0_crypto/src/: main.c
tests/unit/: unittest.cmake
